// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input appearance - default; iconAlign - left 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      data-css-w0yocm=""
    >
      <div
        data-css-1ghdxx6=""
      >
        <input
          data-css-1bkxplq=""
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="The placeholder "
        />
        <div
          data-css-yntvgr=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="info icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input appearance - default; iconAlign - right 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      data-css-w0yocm=""
    >
      <div
        data-css-1ghdxx6=""
      >
        <input
          data-css-i8twf8=""
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="The placeholder "
        />
        <div
          data-css-3rd0lv=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="info icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input appearance - subtle; iconAlign - left 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      data-css-w0yocm=""
    >
      <div
        data-css-1ghdxx6=""
      >
        <input
          data-css-1u1pc12=""
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="The placeholder "
        />
        <div
          data-css-hgugth=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="info icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input appearance - subtle; iconAlign - right 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      data-css-w0yocm=""
    >
      <div
        data-css-1ghdxx6=""
      >
        <input
          data-css-11d30wl=""
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="The placeholder "
        />
        <div
          data-css-y2nw0k=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="info icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      data-css-w0yocm=""
    >
      <div
        data-css-1ghdxx6=""
      >
        <input
          data-css-ly16us=""
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input disabled 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        I'm not usable
      </div>
      <div
        data-css-1ghdxx6=""
      >
        <input
          data-css-ly16us=""
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="I'm untouchable"
        />
        <div
          data-css-edijrd=""
        />
      </div>
      <div
        data-css-1de0a6a=""
      >
        Neither am I
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input error - appearance - default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Problem field
      </div>
      <div
        data-css-mdufbt=""
      >
        <input
          data-css-ly16us=""
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder={undefined}
        />
        <div
          data-css-loo18p=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 19h-2v-2h2v2zm0-4h-2v-4h2v4zm6.531 5L12 6.9917 4.469 20h15.062zM1 22L12 3l11 19H1z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input error - appearance - subtle 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Problem field
      </div>
      <div
        data-css-mdufbt=""
      >
        <input
          data-css-1fhke6k=""
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder={undefined}
        />
        <div
          data-css-loo18p=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 19h-2v-2h2v2zm0-4h-2v-4h2v4zm6.531 5L12 6.9917 4.469 20h15.062zM1 22L12 3l11 19H1z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input full width 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid blue",
          "width": "500px",
        }
      }
    >
      <div
        data-css-w0yocm=""
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          First
        </div>
        <div
          data-css-1ghdxx6=""
        >
          <input
            data-css-ly16us=""
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder={undefined}
          />
        </div>
      </div>
      <div
        data-css-w0yocm=""
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          Second
        </div>
        <div
          data-css-mdufbt=""
        >
          <input
            data-css-ly16us=""
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder={undefined}
          />
          <div
            data-css-loo18p=""
          >
            <div
              className="css-otejxm"
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 19h-2v-2h2v2zm0-4h-2v-4h2v4zm6.531 5L12 6.9917 4.469 20h15.062zM1 22L12 3l11 19H1z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-w0yocm=""
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          Third
        </div>
        <div
          data-css-1ghdxx6=""
        >
          <input
            data-css-1fhke6k=""
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder={undefined}
          />
        </div>
      </div>
      <div
        data-css-w0yocm=""
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          Fourth
        </div>
        <div
          data-css-mdufbt=""
        >
          <input
            data-css-1fhke6k=""
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder={undefined}
          />
          <div
            data-css-loo18p=""
          >
            <div
              className="css-otejxm"
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 19h-2v-2h2v2zm0-4h-2v-4h2v4zm6.531 5L12 6.9917 4.469 20h15.062zM1 22L12 3l11 19H1z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input label 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1ghdxx6=""
      >
        <input
          data-css-ly16us=""
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input label and subLabel 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1ghdxx6=""
      >
        <input
          data-css-ly16us=""
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder={undefined}
        />
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input placeholder 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      data-css-w0yocm=""
    >
      <div
        data-css-1ghdxx6=""
      >
        <input
          data-css-ly16us=""
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="some placeholder"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input right-aligned 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid blue",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "flex-end",
          }
        }
      >
        <div
          data-css-w0yocm=""
        >
          <div
            data-css-1ghdxx6=""
          >
            <input
              data-css-1u1pc12=""
              disabled={false}
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Search"
            />
            <div
              data-css-hgugth=""
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="search icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21.707 20.294L16.314 14.9C17.403 13.504 18 11.799 18 10c0-2.137-.833-4.144-2.344-5.656C14.145 2.832 12.137 2 10 2c-2.137 0-4.146.832-5.656 2.344C2.832 5.856 2 7.863 2 10c0 2.137.832 4.146 2.344 5.656C5.854 17.168 7.863 18 10 18c1.799 0 3.504-.596 4.9-1.685l5.393 5.393 1.414-1.414zM10 16c-1.603 0-3.109-.624-4.242-1.757C4.624 13.11 4 11.603 4 10c0-1.602.624-3.109 1.758-4.242C6.891 4.624 8.397 4 10 4c1.602 0 3.109.624 4.242 1.758C15.376 6.891 16 8.398 16 10c0 1.603-.624 3.11-1.758 4.243C13.109 15.376 11.602 16 10 16z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "border": "3px solid green",
            "height": "50px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Input subLabel 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      data-css-w0yocm=""
    >
      <div
        data-css-1ghdxx6=""
      >
        <input
          data-css-ly16us=""
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder={undefined}
        />
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </div>
  </div>
</div>
`;
